# mynotes

./: 8086-80286isa.md  AboutJavaDesktopApp.md  CertStoreWindowsMachineVsUser.txt  DHtest.cpp  EC-formula-example.md  Edge.AppxManifest.xml  Encoding-of-Eclipse-Windows(JP).md  FloppyDrive.ps1  GPU-info UI app.md  Java evolution.md  Kawai-EUCJP.txt  MacCatalyst version.md  OracleSQL-memo.md  PCHealthcheck.appmanifest.xml  Programing language in platform.md  Python-install-on-Windows.md  Python-install.md  Qualcomm-wifi-driver.md  Readme.md  Sandbox-logon.cmd  Subversion-hook-redmine.md  Summary for MSAL and Microsoft Graph SDK.md  SyncToyforIRingLicense.xml  Windows-file-extensions.md  Windows-package-history.md  advance.js  amixer-install.txt  ansi2knr.c  appx-list-no-WinUI3.txt  appx-list-with-WinUI3.txt  archlinux.packagelist.snapshot  azuread-remotedesktop.md  bash-study.md  books-for-startup.md  cdecl.c  clock.tcl  config.xlaunch  datamine_help.txt  dependency-vscode.txt  disable-gnome-keyring-ubuntu20.04.md  (+72 more)
3d_basic/: OpenGL Cylinder, Prism & Pipe.mhtml  OpenGL Sphere.mhtml  note.txt  stackoverflow-note.txt
English/: The ecclesiastical history of Eusebius Pamphilus translated by CF CRUSE.txt
Triangulation/: BruteForceMouthClose.java  Glossary For Ear Cutting.html  Triangulate a polygon in C# - C# HelperC# Helper.html
Windows-Sandbox/: Sandbox-logon.cmd  sandbox.wsb
Xapp/basicwin/: Makefile.am  Makefile.in  README  basicwin.c  basicwin_icon.xbm  configure.ac  configure.in  x11-egl.c
bluetooth/: main.conf
bookmarks/: db.sqlite3  edge_favorites_12_12_22.html  safari_iphone_bookmark.htm
character_encode/: Memo for character encoding.md  codeutil.cpp  codeutil.h  readme.txt  sjis_duplicate.txt  specialtable.txt
getopt/: _old_unistd(inaccurate).h
gitconfig/: Readme.md  kawai.gitattributes  kawai.gitconfig  vs.gitattributes  windows.gitconfig  work.gitattributes  work.windows.gitattributes
gnu-fonts/: d0500001.disam.pfa  d050000l.pfa
grub/: grub.cfg.autogenerated  grub.dualboot.default
logs/: MAUI-build.md  MAUI-install-ios.md
network/: 10-wired.network  20-wireless.network  disable-wire.sh  disable-wireless.sh  enable-wire.sh  enable-wireless.sh  wpa_supplicant.conf
notes/: Github-bookmarks.md  Handle-disk-partition.md  Readme1.md  Readme2.md  Readme3.md  Readme4.md  Readme5.md  (+15 more)
(+188 files in other folders)
