dnl この行はコメントとして扱われます。
dnl Process this file with autoconf to produce a configure script.
AC_INIT(basicwin.c)	#プロジェクトのソースを指定
			#(特にこれでいけないというものは無い)

AM_INIT_AUTOMAKE(basicwin,0.0.1) #automakeのための初期化

dnl Checks for programs.
AC_PROG_CC	# C コンパイラの決定

dnl Checks for libraries.

dnl Checks for header files.
AC_PATH_XTRA # X Windowのインクルードとライブラリのパスを調べて
	     # それぞれをX_CFLAGSとX_LIBSに代入する
AC_HEADER_STDC # POSIX includeファイルのチェック

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile) #出力ファイル


